MB-6009 Ignore duplicate seq_ids during batch warmup

It migth be possible to have duplicate doc seq_ids for a key in
the access log. Change assert to ignore.

Change-Id: I292d0da17dd641d17180b769113d6a5064fe92d2
Reviewed-on: http://review.couchbase.org/18788
Reviewed-by: Jin Lim <jin@couchbase.com>
Tested-by: Liang Guo <liang@couchbase.com>